<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gameGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="gameGrid,diceResult,rollButton,resetButton" />

    <GridLayout
        android:id="@+id/gameGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="6"
        android:rowCount="10"
        android:alignmentMode="alignMargins"
        android:useDefaultMargins="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/diceResult"
        app:layout_constraintVertical_bias="0.4"/>

    <TextView
        android:id="@+id/diceResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@+id/rollButton"
        app:layout_constraintEnd_toEndOf="@+id/rollButton"
        app:layout_constraintBottom_toTopOf="@+id/rollButton" />

    <Button
        android:id="@+id/rollButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:background="#000000"
        android:text="🎲"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/gameGrid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resetButton"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:background="#000000"
        android:text="@string/reset_game"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/gameGrid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/rollButton"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menuOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:elevation="10dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/gameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_title"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/btnVsComputer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/btnVsComputer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/vs_computer"
            android:backgroundTint="#000000"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/btnPlayFriend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameTitle"
            android:layout_marginTop="32dp" />

        <Button
            android:id="@+id/btnPlayFriend"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/play_with_friend"
            android:backgroundTint="#000000"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnVsComputer"
            android:layout_marginTop="16dp" />
            
        <Button
            android:id="@+id/btnInfo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:backgroundTint="#808080"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPlayFriend"
            app:layout_constraintVertical_bias="0.1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
